--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hexcodeconvertor",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
-  }
+  },
+  "engines": {
+  "node": "v20.16.0"
+}
 }
